--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -4,20 +4,14 @@ date: 2025-02-21
 heroImage: /diary_images/febrero21.avif
 ---
 
-1:22 am. Hmmm me desperté y revise si me respondiste, y nop, estoy algo preocupado, bueno, bastante preocupado de que quieras volver a intentar suicidarte :(, tengo miedo de que lo hayas hecho y ya no estés aquí :(, no quiero que te vayas, eres lo mejor en este mundo, perdón por pensar siempre en lo peor
-
-7:01 am. Sigo preocupado u.u, lo único que me hace pensar que no lo hiciste es que no me has enviado una carta de despedida, pero al igual sigo sobre pensando, ¿Y si no me enviaste la carta para no herirme?, ¿Y si no querías que te intente salvar?, no lo sé, estoy muy ansioso, tengo miedo de que lo hayas hecho :(, no se qué hacer, ¿te escribo por whatsapp?, ¿si lo hago te vas a sentir abrumada o querida?, ¿voy a parecer intenso y molesto o que me importas?, aaaaa no se, te voy a escribir igual, no te llegan los mensajes :(
-
-7:16 ya te llegó el mensaje u.u
-
-7:38 ya respondiste :3, lo malo es que estás mal :(, ya te lo escribí por Whatsapp pero lo voy a repetir, no se por lo que estás pasando pero quisiera ayudarte, quisiera ser tu apoyo, quisiera hacer que no te sientas mal :(,
-
---------------------------------------------------
+import Audio from "~/components/common/Audio.astro";
 
 1:30 am. Estoy destrozado, estoy llorando, o en verdad lo intentaste y ya no estás aquí, o decidiste no responderme ni hablarme más, y las dos opciones son malas :(, obviamente la peor es que te hayas suicidado, y es la última que quiero, no quiero que lo hagas :(, si te vas de este mundo me voy a ir contigo
 
 7:42 me duele demasiado que no pueda ayudarte, me duele demasiado que tengas que sufrir por esto sola :(
 
 7:57 no puedo dejar de llorar, esto es demasiado difícil, demasiado, y más con mis pensamientos negativos que sobre pienso todo el tiempo, me envió un audio
+
+<Audio src="/audios/vale1.ogg" />
 
 y pienso que tiene a otro y por eso habla menos conmigo, que se siente mal por querer a otro y dejarme por el, y si eso en realidad fue lo que sucedió?, y si se beso o tuvo algo con otro hombre y se ha sentido culpable y por eso se siente insuficiente o que hay alguien mejor que ella?, no se, odio pensar en eso, odio pensar en una versión mala de ella, quisiera seguir viendo la versión idealizada que tenía sobre ella, no quiero pensar que ella es mala y que le gusta otro hombre, siento que soy muy egoísta por pensar que todo se trata de mi, y si ella está pasando por un mal momento y ya?
