--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -15,3 +15,7 @@ import Audio from "~/components/common/Audio.astro";
 <Audio src="/audios/vale1.ogg" />
 
 y pienso que tiene a otro y por eso habla menos conmigo, que se siente mal por querer a otro y dejarme por el, y si eso en realidad fue lo que sucedió?, y si se beso o tuvo algo con otro hombre y se ha sentido culpable y por eso se siente insuficiente o que hay alguien mejor que ella?, no se, odio pensar en eso, odio pensar en una versión mala de ella, quisiera seguir viendo la versión idealizada que tenía sobre ella, no quiero pensar que ella es mala y que le gusta otro hombre, siento que soy muy egoísta por pensar que todo se trata de mi, y si ella está pasando por un mal momento y ya?
+
+11:09 Bueno, ya termine de arreglar la pagina, aun le faltan cosas pero eso no importa, lo importante es, que opinas del audio que ella me envio? :(, que deberia hacer?, no se que hacer, deberia enviarle varios mensajes en el dia reforzando que la quiero y que estoy para ella?, tipo "no tienes que responder esto, pero quiero que sepas...", o deberia esperar a que me vuelva a escribir?, y si no me vuelve a escribir?, ayudaaaaa :(
+
+se que estas muy ocupada con el trabajo y familia, asi que sorry si te quito mucho tiempo, y bueno, gracias de verdad, eres como mi segunda madre, (diria que eres como mi madre, pero te vas a enojar), de verdad gracias por todo lo que has hecho por mi, te quiero bastante, me hubiera gustado decirte esto de frente pero no tengo el coraje, solo te lo iba a decir en el mensaje de despedida (este no es el mensaje de despedida), gracias por todo, siento que aveces menosprecio lo que haces, te he dicho que vale me salvo y que gracias a ella no me suicide, pero tambien gracias a ti, gracias por estar todos estos años, por contestar la llamada, por hablar con mi padre, con mi familia, gracias de verdad por todo
