--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -19,3 +19,40 @@ y pienso que tiene a otro y por eso habla menos conmigo, que se siente mal por q
 11:09 Bueno, ya termine de arreglar la pagina, aun le faltan cosas pero eso no importa, lo importante es, que opinas del audio que ella me envio? :(, que deberia hacer?, no se que hacer, deberia enviarle varios mensajes en el dia reforzando que la quiero y que estoy para ella?, tipo "no tienes que responder esto, pero quiero que sepas...", o deberia esperar a que me vuelva a escribir?, y si no me vuelve a escribir?, ayudaaaaa :(
 
 se que estas muy ocupada con el trabajo y familia, asi que sorry si te quito mucho tiempo, y bueno, gracias de verdad, eres como mi segunda madre, (diria que eres como mi madre, pero te vas a enojar), de verdad gracias por todo lo que has hecho por mi, te quiero bastante, me hubiera gustado decirte esto de frente pero no tengo el coraje, solo te lo iba a decir en el mensaje de despedida (este no es el mensaje de despedida), gracias por todo, siento que aveces menosprecio lo que haces, te he dicho que vale me salvo y que gracias a ella no me suicide, pero tambien gracias a ti, gracias por estar todos estos años, por contestar la llamada, por hablar con mi padre, con mi familia, gracias de verdad por todo
+
+15:59 hmmm, la quiero mucho, quiero estar con ella toda la vida, pero mis pensamientos negativos me siguen atormentando :c, estoy empezando a creer que le gusta a alguien mas y por eso ya no me escribe, sé que no es asi, pero siempre va a existir esa posibilidad :c, ella va a preferir mentirme que decirme la verdad, ella sabe que si me dice que le gusta alguien mas y esta saliendo con otra persona me voy a suicidar, asi que ella nunca me lo diria :c, i hate everything, i hate life, why?, why this is happening to me?, finally something good happens when i met her, and now she doesnt want to talk, i dont want money, i dont want to be rich, i dont want to be famous, i just want her, why life is like that, i hate everything, my life is so unfair, its the first time i think that, i've always knew my position, i have a home, i've always had food, money, i had everything, my parents always loved me, they always want the best for me, on university theres people that support me, you also support me, etc, i've always felt guilt because i have a nice life, but this is the first time i think my life is unfair, i just cant anymore, all these years everything was bad, i was close to end all but she came, she is the only good thing that came into my life, and now she's almost gone :c
+
+What's the point of living in the dark
+Trying to stop the bleeding of the heart
+Tell me why have you forsaken me
+Only death will ever set me free
+Take this pain away
+
+Caught in a circuit
+No means to an end
+I'm trying to quiet the voice in my head
+Just cut me open and leave me for dead
+
+I feel a cold breath on my neck
+Telling me that I could be next
+Every day is a struggle to deal with the pain
+Everything's changing, but I stay the same
+
+Why can't I pull the thorn in my side?
+Lord knows I've tried
+Watch the night, like a knife in my back
+Into the black
+
+There's something in the water
+Pulling me down in the deep
+Would you follow me to the edge?
+Would you follow me? (Into the black)
+
+Into the black
+
+Darkness arising
+An endless horizon
+Pulling me under
+Into the black
+
+that song and that album has been so important to me this months, the album its called the black, but another day im going to talk about it
