--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -22,37 +22,8 @@ se que estas muy ocupada con el trabajo y familia, asi que sorry si te quito muc
 
 15:59 hmmm, la quiero mucho, quiero estar con ella toda la vida, pero mis pensamientos negativos me siguen atormentando :c, estoy empezando a creer que le gusta a alguien mas y por eso ya no me escribe, sé que no es asi, pero siempre va a existir esa posibilidad :c, ella va a preferir mentirme que decirme la verdad, ella sabe que si me dice que le gusta alguien mas y esta saliendo con otra persona me voy a suicidar, asi que ella nunca me lo diria :c, i hate everything, i hate life, why?, why this is happening to me?, finally something good happens when i met her, and now she doesnt want to talk, i dont want money, i dont want to be rich, i dont want to be famous, i just want her, why life is like that, i hate everything, my life is so unfair, its the first time i think that, i've always knew my position, i have a home, i've always had food, money, i had everything, my parents always loved me, they always want the best for me, on university theres people that support me, you also support me, etc, i've always felt guilt because i have a nice life, but this is the first time i think my life is unfair, i just cant anymore, all these years everything was bad, i was close to end all but she came, she is the only good thing that came into my life, and now she's almost gone :c
 
-What's the point of living in the dark
-Trying to stop the bleeding of the heart
-Tell me why have you forsaken me
-Only death will ever set me free
-Take this pain away
+Podria hablar por horas sobre como la quiero, se que solo fueron 4 meses ya desde que empezamos a hablar, pero hubo un momento en el que me di cuenta que ella era la mujer con la que queria estar toda mi vida, un dia no recuerdo como, pero ella estaba en video llamada mientras me tocaba canciones con la guitarra y cantando, es lo mas hermoso que he visto, en ese momento habia visto su cara en fotos, pero no en video, y ver su cara, sus expresiones, como se rie, como le da verguenza algo, como miraba directo a la camara como si me estuviera viendo a los ojos, fue demasiado hermoso, desde ese momento estoy convencido de que quiero estar con ella para siempre, de que haria lo que fuera por ella, y ahora
 
-Caught in a circuit
-No means to an end
-I'm trying to quiet the voice in my head
-Just cut me open and leave me for dead
+Odio todo, odio seguir con vida, estoy destrozado, estoy sin vida, solo pienso en ella, solo quiero estar con ella, solo quiero seguir mi vida con ella, nada mas en la vida me interesa, ayer antes de la cita estuve en la casa de un compañero y jugamos entre los 4 y asi, pero en ningun momento lo disfrute, antes en los dias tristes por lo menos escuchaba musica todo el dia, compraba bastante comida, y (que verguenza decirlo) me tocaba todo el dia (si, todo el dia), sin importar lo que pasará al menos esas tres cosas siempre estaban ahi para pasar el tiempo y olvidarme de todo, pero desde que ella me termino, lo unico que me queda es la musica, el martes que ella me termino no comi nada, intente almorzar, pero cuando comi unas cucharadas simplemente no podia, mi cuerpo lo rechazaba. El miercoles solo almorze, el jueves tambien, hoy me obligue a comer algo antes de ir a la universidad, comi yogur y hojuelas sin maiz y alrmoze (me llene rapido o no se porque, pero no lo acabe), no creo que coma algo en la noche, y ya no me he vuelto a tocar. Im dying, i cant anymore, tengo miedo de que la musica tampoco me vuelva a causar algo, no puedo seguir aguantando mas :c, no aguanto mas :c, quisiera acabar con todo ahora, quisiera dejar de existir, no quiero estar mas aqui, pero no me voy a rendir aun, voy a tener que soportar este dolor para poder luchar por ella, voy a aguantar y seguir viviendo para no abandonarla, para poder estar ahi cuando se anime a abrir su corazon y me cuente cuando se sienta mal.
 
-I feel a cold breath on my neck
-Telling me that I could be next
-Every day is a struggle to deal with the pain
-Everything's changing, but I stay the same
-
-Why can't I pull the thorn in my side?
-Lord knows I've tried
-Watch the night, like a knife in my back
-Into the black
-
-There's something in the water
-Pulling me down in the deep
-Would you follow me to the edge?
-Would you follow me? (Into the black)
-
-Into the black
-
-Darkness arising
-An endless horizon
-Pulling me under
-Into the black
-
-that song and that album has been so important to me this months, the album its called the black, but another day im going to talk about it
+Quisiera que el tiempo se pasara rapido, odio estar horas llorando, sin saber que hacer, apatico, indiferente, esperando que las horas acaben para dormir y repetir lo mismo al dia siguiente :c
