--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -27,3 +27,15 @@ Podria hablar por horas sobre como la quiero, se que solo fueron 4 meses ya desd
 Odio todo, odio seguir con vida, estoy destrozado, estoy sin vida, solo pienso en ella, solo quiero estar con ella, solo quiero seguir mi vida con ella, nada mas en la vida me interesa, ayer antes de la cita estuve en la casa de un compañero y jugamos entre los 4 y asi, pero en ningun momento lo disfrute, antes en los dias tristes por lo menos escuchaba musica todo el dia, compraba bastante comida, y (que verguenza decirlo) me tocaba todo el dia (si, todo el dia), sin importar lo que pasará al menos esas tres cosas siempre estaban ahi para pasar el tiempo y olvidarme de todo, pero desde que ella me termino, lo unico que me queda es la musica, el martes que ella me termino no comi nada, intente almorzar, pero cuando comi unas cucharadas simplemente no podia, mi cuerpo lo rechazaba. El miercoles solo almorze, el jueves tambien, hoy me obligue a comer algo antes de ir a la universidad, comi yogur y hojuelas sin maiz y alrmoze (me llene rapido o no se porque, pero no lo acabe), no creo que coma algo en la noche, y ya no me he vuelto a tocar. Im dying, i cant anymore, tengo miedo de que la musica tampoco me vuelva a causar algo, no puedo seguir aguantando mas :c, no aguanto mas :c, quisiera acabar con todo ahora, quisiera dejar de existir, no quiero estar mas aqui, pero no me voy a rendir aun, voy a tener que soportar este dolor para poder luchar por ella, voy a aguantar y seguir viviendo para no abandonarla, para poder estar ahi cuando se anime a abrir su corazon y me cuente cuando se sienta mal.
 
 Quisiera que el tiempo se pasara rapido, odio estar horas llorando, sin saber que hacer, apatico, indiferente, esperando que las horas acaben para dormir y repetir lo mismo al dia siguiente :c
+
+7:34 como dije en la version normal, iba a comenzar a escribir aqui y justo ella me escribio, iba a escribir que ya estoy aceptando que hoy no me va a volver a escribir pero que voy a seguir apoyandola, y justo me escribio :3, me dijo "espero no estés enojado conmigo" y yo le dije; "noooooo, no te preocupes", "te amo mucho y estas pasando por una crisis, como me voy a enojar contigo?", dijo;__ perate que voy a cambiar el formato JDKSA
+
+```javascript
+vale: "hay gente que no lo entiende"
+yo: its okay, te voy a estar esperando y dandote todo lo que necesites
+yo: siempre voy a estar para ti
+vale: "porque sos asi conmigo?"
+vale: "que mrd hice para merecerte"
+```
+
+y ahi lo que le dije es secreto JDKSAJ, y no ha respondido, pero tambien como dije en al version normal, siento que estoy haciendo las cosas bien, asi que estoy feli
