--- a/src/content/diary/nancy-feb-21.mdx
+++ b/src/content/diary/nancy-feb-21.mdx
@@ -38,4 +38,4 @@ vale: "porque sos asi conmigo?"
 vale: "que mrd hice para merecerte"
 ```
 
-y ahi lo que le dije es secreto JDKSAJ, y no ha respondido, pero tambien como dije en al version normal, siento que estoy haciendo las cosas bien, asi que estoy feli
+y ahi lo que le dije es secreto JDKSAJ, y no ha respondido, pero tambien como dije en la version normal, siento que estoy haciendo las cosas bien, asi que estoy feli
