--- a/src/content/diary/nancy-feb-22.mdx
+++ b/src/content/diary/nancy-feb-22.mdx
@@ -31,3 +31,7 @@ Y que haya jugado sola y haya preferido hacer llamada con sus amigos antes que a
 but, en parte conozco como es ella, y probablemente es su mecanismo de defensa alejarse y no afrontar las cosas, podria explicarte porque aqui, pero, ya estoy escribiendo demasiado y apenas esta comenzando el dia, asi que en la cita te lo digo, ademas, cada persona es diferente, cada persona expresa su amor de forma distinta, no le puedo pedir que sea como yo, ademas de que yo soy muy ansioso asi que, osea, no quiero decir de que, "no le puedo pedir que sea como yo", suena a que digo que yo soy perfecto, y no, en parte soy asi porque soy muy ansioso, anyways. Ya despues de toooodo eso, me envio un audio diciendo que se iba a dormir :3
 
 <Audio src="/audios/vale3.ogg" />
+
+2:19 Ahora ella me acaba de soltar una bomba a mi ahora JHDASKAS, tenia razon (me imagine 10823012 escenarios), esto es muy dificil, demasiado, quisiera morir, quisiera dejar de vivir ahora mismo, quisiera no seguir existiendo, se que dije que no me iba a rendir y voy a luchar con ella, y voy a hacerlo, pero no se cuanto mas pueda soportarlo, no se cual sea el punto en el que me quiebre y no pueda mas, pero voy a seguir, voy a seguir por ella, ahora con lo que ella me acaba de decir me estoy repleanteando toda mi vida JDKLSAJ, creo que lo que pase y las decisiones que tome van a determinar como sera mi vida, con lo que ella me dijo me respondio todas las dudas, por ejemplo esas 3 preguntas que puse mas arriba JDKASL, necesito hablar contigo ya 😭😭😭😭, esto si es una bomba, pero bueno, voy a esperar al lunes, no se si ponerte el audio, porque tambien dice cosas de mi que no sabes JDKLSA y que verguenza
+
+<Audio src="/audios/vale4.ogg" />
