--- a/src/content/diary/nancy-feb-22.mdx
+++ b/src/content/diary/nancy-feb-22.mdx
@@ -35,3 +35,5 @@ but, en parte conozco como es ella, y probablemente es su mecanismo de defensa a
 2:19 Ahora ella me acaba de soltar una bomba a mi ahora JHDASKAS, tenia razon (me imagine 10823012 escenarios), esto es muy dificil, demasiado, quisiera morir, quisiera dejar de vivir ahora mismo, quisiera no seguir existiendo, se que dije que no me iba a rendir y voy a luchar con ella, y voy a hacerlo, pero no se cuanto mas pueda soportarlo, no se cual sea el punto en el que me quiebre y no pueda mas, pero voy a seguir, voy a seguir por ella, ahora con lo que ella me acaba de decir me estoy repleanteando toda mi vida JDKLSAJ, creo que lo que pase y las decisiones que tome van a determinar como sera mi vida, con lo que ella me dijo me respondio todas las dudas, por ejemplo esas 3 preguntas que puse mas arriba JDKASL, necesito hablar contigo ya 😭😭😭😭, esto si es una bomba, pero bueno, voy a esperar al lunes, no se si ponerte el audio, porque tambien dice cosas de mi que no sabes JDKLSA y que verguenza
 
 <Audio src="/audios/vale4.ogg" />
+
+De momento solo voy a escribir hasta aqui, si continuo voy a seguir llorando horas y ahora tengo que servir el almuerzo y salir con mi padre a comprar la comida de la gata y asi, asi que no puedo ahora ponerme a llorar por horas, si me pudieras escribir por whatsapp seria bonito :c, estoy destrozado, tengo miedo de que mis pensamientos negativos me ganen vuelva a intentarlo, se que dije que no lo haria para apoyarla, pero ptm, ya esta bajando mi papa
