--- a/src/content/diary/nancy-feb-22.mdx
+++ b/src/content/diary/nancy-feb-22.mdx
@@ -37,3 +37,7 @@ but, en parte conozco como es ella, y probablemente es su mecanismo de defensa a
 <Audio src="/audios/vale4.ogg" />
 
 De momento solo voy a escribir hasta aqui, si continuo voy a seguir llorando horas y ahora tengo que servir el almuerzo y salir con mi padre a comprar la comida de la gata y asi, asi que no puedo ahora ponerme a llorar por horas, si me pudieras escribir por whatsapp seria bonito :c, estoy destrozado, tengo miedo de que mis pensamientos negativos me ganen vuelva a intentarlo, se que dije que no lo haria para apoyarla, pero ptm, ya esta bajando mi papa
+
+3:46 bueno, ya estoy otra vez, intente almorzar pero meh, comi muy poco, ya llevo un tiempo pensando sobre esto y, debi haberme suicidado ese dia, nunca debi conocerla, asi hubiera podido hacerlo y dejar de sufrir mas, pero ya no puedo, tengo que seguir luchando por ella y demostrarle que no me voy a rendir jamas, i hate my life, pero tengo aun esperanzas, por lo que dijo se ve que probablemente esta muy traumada con la persona que se enamoro, quizas tiene un bloqueo emocional, quizas tiene miedo a volver a enamorarse, hay muchas cosas, estaba viendo un poco sobre el tema pero tenia que hacer cosas, asi que voy a investigar, pero igual tu eres la que sabe. Ademas, todas las cosas negativas que dice sobre ella, se siente culpable, y por ejemplo, si no se sintiera culpable significaria que ella es asi y que ama de forma diferente, pero como se siente culpable y todo lo que dice, se nota que quiere y se siente mal por no poder, asi que creo que puedo ayudarla, creo que podemos trabajar en eso.
+
+cuando estemos en la cita te voy a decir que le respondi, aunque ella dijo que no le tenia que responder o que la iba a odiar, si le respondi claramente. Volviendo a lo de antes, tengo miedo de que logre ayudarla y que pueda volverse a enamorar y que lo haga, pero no de mi :(, tengo miedo de que en cualquier momento se aburra de mi y no me vuelva a escribir. Ya quiero que se acabe el dia, no aguanto mas :(, quiero dormir y no volver a despertar, quiero acabar con todo
