--- a/src/content/diary/nancy-feb-22.mdx
+++ b/src/content/diary/nancy-feb-22.mdx
@@ -41,3 +41,9 @@ De momento solo voy a escribir hasta aqui, si continuo voy a seguir llorando hor
 3:46 bueno, ya estoy otra vez, intente almorzar pero meh, comi muy poco, ya llevo un tiempo pensando sobre esto y, debi haberme suicidado ese dia, nunca debi conocerla, asi hubiera podido hacerlo y dejar de sufrir mas, pero ya no puedo, tengo que seguir luchando por ella y demostrarle que no me voy a rendir jamas, i hate my life, pero tengo aun esperanzas, por lo que dijo se ve que probablemente esta muy traumada con la persona que se enamoro, quizas tiene un bloqueo emocional, quizas tiene miedo a volver a enamorarse, hay muchas cosas, estaba viendo un poco sobre el tema pero tenia que hacer cosas, asi que voy a investigar, pero igual tu eres la que sabe. Ademas, todas las cosas negativas que dice sobre ella, se siente culpable, y por ejemplo, si no se sintiera culpable significaria que ella es asi y que ama de forma diferente, pero como se siente culpable y todo lo que dice, se nota que quiere y se siente mal por no poder, asi que creo que puedo ayudarla, creo que podemos trabajar en eso.
 
 cuando estemos en la cita te voy a decir que le respondi, aunque ella dijo que no le tenia que responder o que la iba a odiar, si le respondi claramente. Volviendo a lo de antes, tengo miedo de que logre ayudarla y que pueda volverse a enamorar y que lo haga, pero no de mi :(, tengo miedo de que en cualquier momento se aburra de mi y no me vuelva a escribir. Ya quiero que se acabe el dia, no aguanto mas :(, quiero dormir y no volver a despertar, quiero acabar con todo
+
+18:19 A las 16:18 me envio un audio despues de que le respondí (lo que te dije que te voy a decir en la cita), aqui esta el audio :c
+
+<Audio src="/audios/vale5.ogg" />
+
+18:53 podria seguir escribiendo pero volveria a escribir lo mismo de siempre, que quiero morir, que ya no quiero seguir, me tome la pastilla como a las 18:10 justamente para acostarme temprano, y ya me esta dando algo de sueño, asi que ojala pueda dormir, estoy muy exhausto
